--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1 class="logo"><a href="/index.html">Café Capprio</a></h1>
 <nav class="nav--top">
 <ul class="nav__ul">
-<li class="nav__li"><a class="active" href="#">Accueil</a></li>
+<li class="nav__li"><a class="articles/index.html" href="#">Accueil</a></li>
 <li class="nav__li"><a href="articles/article1.html">Articles</a></li>
 <li class="nav__li"><a href="boutique.html">Boutique</a></li>
 </ul>
