--- a/boutique.html
+++ b/boutique.html
@@ -11,7 +11,7 @@
     <nav class="nav--top">
       <ul class="nav__ul">
         <li class="nav__li"><a href="index.html">Accueil</a></li>
-        <li class="nav__li"><a href="/articles/index.html">Articles</a></li>
+        <li class="nav__li"><a href="articles/article1.html">Articles</a></li>
         <li class="nav__li"><a class="active" href="#">Boutique</a></li>
       </ul>
     </nav>
