--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body class="page-accueil">
 <header class="site-header">
-<h1 class="logo"><a href="/index.html">Café Capprio</a></h1>
+<h1 class="logo"><a href="index.html">Café Capprio</a></h1>
 <nav class="nav--top">
 <ul class="nav__ul">
 <li class="nav__li"><a class="articles/index.html" href="#">Accueil</a></li>
