--- a/boutique.html
+++ b/boutique.html
@@ -7,7 +7,7 @@
   </head>
 <body class="page-boutique">
   <header class="site-header">
-    <h1 class="logo"><a href="/index.html">Café Simplon</a></h1>
+    <h1 class="logo"><a href="index.html">Café Simplon</a></h1>
     <nav class="nav--top">
       <ul class="nav__ul">
         <li class="nav__li"><a href="index.html">Accueil</a></li>
